<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/main_header">

        <EditTextPreference
            app:key="title"
            app:title="@string/profile_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0"
            app:key="idle_dur"
            app:title="@string/idle_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/actions_header">
        <Preference
            app:key="timeout_idle_action"
            app:title="@string/timeout_title" />

        <Preference
            app:key="press_up_action"
            app:title="@string/press_up_title" />

        <Preference
            app:key="press_down_action"
            app:title="@string/press_down_title" />

        <Preference
            app:key="release_up_action"
            app:title="@string/release_up_title" />

        <Preference
            app:key="release_down_action"
            app:title="@string/release_down_title" />

    </PreferenceCategory>

</PreferenceScreen>