<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="24dp"
            android:id="@+id/actions_list">

            <CheckBox
                android:tag="act_media_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/media_play_pause" />

            <CheckBox
                android:tag="act_media_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/media_next" />

            <CheckBox
                android:tag="act_media_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/media_previous" />

            <CheckBox
                android:tag="act_media_rewind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/media_rewind" />

            <CheckBox
                android:tag="act_media_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/media_forward" />

            <CheckBox
                android:tag="act_volume_stream_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/stream_volume_up" />

            <CheckBox
                android:tag="act_volume_stream_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/stream_volume_down" />

            <CheckBox
                android:tag="act_flashlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/flashlight_on_off" />

            <CheckBox
                android:id="@+id/act_vibrate"
                android:tag="act_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/vibrate" />

            <LinearLayout
                android:id="@+id/vibrate_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duration" />

                <EditText
                    android:tag="param_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <CheckBox
                android:tag="act_vtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/vibrate_time" />

            <CheckBox
                android:id="@+id/act_wakelock_acquire"
                android:tag="act_wakelock_acquire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/wakelock_acquire" />

            <LinearLayout
                android:id="@+id/wakelock_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeout" />

                <EditText
                    android:tag="param_wakelock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <androidx.appcompat.widget.SwitchCompat
                    android:tag="param_wakelock_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/wake_up_screen" />
            </LinearLayout>

            <CheckBox
                android:tag="act_wakelock_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/wakelock_release" />

            <CheckBox
                android:id="@+id/act_intent"
                android:tag="act_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/send_intent" />

            <LinearLayout
                android:id="@+id/intent_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action" />

                <EditText
                    android:tag="param_intent_action"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category" />

                <EditText
                    android:tag="param_intent_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mime_type" />

                <EditText
                    android:tag="param_intent_mimetype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data" />

                <EditText
                    android:tag="param_intent_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra" />

                <EditText
                    android:tag="param_intent_extra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_delimiter" />

                <EditText
                    android:tag="param_intent_extra_delimiter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/package_class" />

                <EditText
                    android:tag="param_intent_package"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/target" />

                <RadioGroup
                    android:tag="param_intent_target"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/param_intent_target_activity" >
                    <RadioButton
                        android:id="@+id/param_intent_target_activity"
                        android:tag="activity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity" />
                    <RadioButton
                        android:tag="broadcast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/broadcast" />
                    <RadioButton
                        android:tag="service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service" />
                </RadioGroup>

            </LinearLayout>

            <CheckBox
                android:id="@+id/act_switch"
                android:tag="act_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/switch_handler" />

            <LinearLayout
                android:id="@+id/switch_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="8dp"
                android:visibility="gone" >

                <RadioGroup
                    android:id="@+id/param_switch"
                    android:tag="param_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>